--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Legacy | Beta</title>
-    <link href="css/styles.css" rel="stylesheet">
+    <link href="css/home.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
@@ -26,6 +26,6 @@
         </button>
     </div>
 
-    <script src="js/script.js"></script>
+    <script src="js/home.js"></script>
 </body>
 </html>
