--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
     <div class="sidebar">
         <ul>
-            <li><a href="#"><i class="material-icons">home</i></a></li>
-            <li><a href="#"><i class="material-icons">sports_esports</i></a></li>
-            <li><a href="#"><i class="material-icons">search</i></a></li>
+            <li><a href="index.html"><i class="material-icons">home</i></a></li>
+            <li><a href="g.html"><i class="material-icons">sports_esports</i></a></li>
+            <li><a href="s.html"><i class="material-icons">search</i></a></li>
         </ul>
     </div>
 
