--- a/g.html
+++ b/g.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Legacy | Beta</title>
     <link rel="stylesheet" href="css/home.css">
+    <link rel="stylesheet" href="css/g.css">
 </head>
 <body>
     <canvas></canvas>
