--- a/g.html
+++ b/g.html
@@ -6,6 +6,7 @@
     <title>Legacy | Beta</title>
     <link rel="stylesheet" href="css/home.css">
     <link rel="stylesheet" href="css/g.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
     <canvas></canvas>
