--- a/g.html
+++ b/g.html
@@ -18,8 +18,26 @@
             <li><a href="#"><i class="material-icons">search</i></a></li>
         </ul>
     </div>
-  
+
+    <div class="game-cards-container">
+        <div class="game-card">
+            <img src="path/to/image1.jpg" alt="Game 1" />
+            <h3>Game Title 1</h3>
+            <p>Description of the game goes here.</p>
+        </div>
+        <div class="game-card">
+            <img src="path/to/image2.jpg" alt="Game 2" />
+            <h3>Game Title 2</h3>
+            <p>Description of the game goes here.</p>
+        </div>
+        <div class="game-card">
+            <img src="path/to/image3.jpg" alt="Game 3" />
+            <h3>Game Title 3</h3>
+            <p>Description of the game goes here.</p>
+        </div>
+        <!-- Add more cards as needed -->
+    </div>
+
     <script src="js/home.js"></script>
-  
 </body>
 </html>
