--- a/index.html
+++ b/index.html
@@ -18,13 +18,9 @@
         </ul>
     </div>
 
-    <div class="container">
-        <h1><span id="auto-typed-text"></span><span id="cursor">|</span></h1>
-        <p>Fast, Simple, Effortless.</p>
-        <button class="cta-button" onmouseover="explodeStars(event)">
-            Get Started
-        </button>
-    </div>
+    <button class="cta-button" onmouseover="explodeStars(event)" onclick="window.location.href='g.html'">
+                Get Started
+    </button>
 
     <script src="js/home.js"></script>
 
