--- a/index.html
+++ b/index.html
@@ -18,10 +18,14 @@
         </ul>
     </div>
 
-    <button class="cta-button" onmouseover="explodeStars(event)" onclick="window.location.href='g.html'">
-                Get Started
-    </button>
-
+    <div class="container">
+        <h1><span id="auto-typed-text"></span><span id="cursor">|</span></h1>
+        <p>Fast, Simple, Effortless.</p>
+        <button class="cta-button" onmouseover="explodeStars(event)" onclick="window.location.href='g.html'">
+           Get Started
+        </button>
+    </div>
+    
     <script src="js/home.js"></script>
 
     <script>
