--- a/g.html
+++ b/g.html
@@ -47,6 +47,7 @@
                     <h3>${game.title}</h3>
                     <p>${game.description}</p>
                 `;
+                card.style.animationDelay = `${index * 0.1}s`; 
                 container.appendChild(card);
             });
         }
