--- a/g.html
+++ b/g.html
@@ -53,43 +53,37 @@
     </div>
 
     <script src="js/home.js"></script>
-    <script>
-        async function fetchGameData() {
-            try {
-                const response = await fetch('games.json'); 
-                const games = await response.json();
-                displayGameCards(games);
-            } catch (error) {
-                console.error('Error fetching game data:', error);
-            }
+   <script>
+    async function fetchGameData() {
+        try {
+            const response = await fetch('games.json'); 
+            const games = await response.json();
+            displayGameCards(games);
+        } catch (error) {
+            console.error('Error fetching game data:', error);
         }
+    }
 
-        function displayGameCards(games) {
-            const container = document.getElementById('gameCardsContainer');
-            container.innerHTML = ''; 
+    function displayGameCards(games) {
+        const container = document.getElementById('gameCardsContainer');
+        container.innerHTML = ''; 
 
-            games.forEach((game, index) => {
-                const card = document.createElement('div');
-                card.className = 'game-card no-hover'; 
-                card.innerHTML = `
-                    <a href="${game.link}" target="_blank">
-                        <img src="${game.image}" alt="${game.title}" />
-                        <h3>${game.title}</h3>
-                    </a>
-                `;
-                card.style.animationDelay = `${index * 0.1}s`; 
-                container.appendChild(card);
-            });
+        games.forEach((game, index) => {
+            const card = document.createElement('div');
+            card.className = 'game-card'; 
+            card.innerHTML = `
+                <a href="${game.link}" target="_blank">
+                    <img src="${game.image}" alt="${game.title}" />
+                    <h3>${game.title}</h3>
+                </a>
+            `;
+            card.style.animationDelay = `${index * 0.1}s`; 
+            container.appendChild(card);
+        });
 
-            setTimeout(() => {
-                const cards = container.getElementsByClassName('game-card');
-                for (let card of cards) {
-                    card.classList.remove('no-hover');
-                }
-            }, games.length * 100 + 500); 
-        }
+    }
 
-        fetchGameData();
-    </script>
+    fetchGameData();
+</script>
 </body>
 </html>
